--- a/TestConsole/TestConsole/TestConsole.vcxproj
+++ b/TestConsole/TestConsole/TestConsole.vcxproj
@@ -153,20 +153,24 @@
   <ItemGroup>
     <ClInclude Include="define.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="License.h" />
     <ClInclude Include="MathAlg.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="RAND.H" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="STRUCTS.H" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="TestConsole.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="License.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="RAND.CPP" />
     <ClCompile Include="TestConsole.cpp" />
   </ItemGroup>
   <ItemGroup>
