--- a/TestConsole/TestConsole/TestConsole.vcxproj.filters
+++ b/TestConsole/TestConsole/TestConsole.vcxproj.filters
@@ -39,12 +39,24 @@
     <ClInclude Include="MathAlg.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="License.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="RAND.H">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TestConsole.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
     <ClCompile Include="pch.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="License.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="RAND.CPP">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
